--- a/plugin.yml
+++ b/plugin.yml
@@ -1,3 +1,5 @@
 name: RLMTownNoMobs
 main: com.rlminecraft.RLMTownNoMobs.RLMTownNoMobs
-version: 1.0
+version: 1.1
+author: Matt_Fielding
+depend: [Towny]
