--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Matt/Downloads/bukkit-1.4.2-R0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Matt/Downloads/Towny_Advanced/Towny.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Matt/MC Resources/Bukkit/bukkit-1.5.1-R0.1-20130401.060134-19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Matt/MC Resources/Plugin/Towny.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
