--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: RLMTownNoMobs
 main: com.rlminecraft.RLMTownNoMobs.RLMTownNoMobs
-version: 1.1
-author: Matt_Fielding
+version: 1.2
+author: MattFielding
 depend: [Towny]
